# Swarm

./: auto_launcher.sh  profile.txt  robot_perormance.txt
Arena Scenarios/: arena configurations  room_empty.argos
automation/: auto_launcher.sh  don't_use.sh
controllers/: CMakeLists.txt
controllers/footbot_foraging/: footbot_foraging.cpp  footbot_foraging.h
controllers/footbot_roomobstacle/: CMakeLists.txt  Makefile  cmake_install.cmake  footbot_roomobstacle.cpp  footbot_roomobstacle.h
experiments/: foraging.argos  room_2room.argos  room_blocked.argos  room_busy.argos  room_large.argos  room_obstacle.argos
experiments/2021_05_18_1621356902/: temp_1.argos
experiments/2021_05_25_1621931392/: temp_1.argos
experiments/2021_05_25_1621932761/: temp_1.argos
experiments/2021_05_25_1621932977/: temp_1.argos
experiments/ArenaScenarios/: room_2room.argos  room_blocked.argos  room_busy.argos  room_empty.argos  room_large.argos
loop_functions/: CMakeLists.txt
loop_functions/foraging_loop_functions/: CMakeLists.txt  foraging_loop_functions.cpp  foraging_loop_functions.h
loop_functions/room_obstacle_loop_functions/: .room_obstacle_loop_functions.cpp.swp  CMakeLists.txt  room_obstacle_loop_functions.cpp  room_obstacle_loop_functions.h  roomobstacle_loop_functions.cpp  roomobstacle_loop_functions.h
output/2021_03_23_1616510134/: robot_performance_1.txt  robot_performance_10.txt  robot_performance_2.txt  robot_performance_5.txt  robot_performance_6.txt  robot_performance_8.txt  robot_performance_9.txt
output/2021_03_23_1616514221/: robot_performance_1.txt  (+9 more)
(+502 files in other folders)
